# ai-chess-arena

./: .gitignore  all_python_code.txt  copy.py  main.py  pyproject.toml  server.py
src/agents/: chess_player.py  game_orchestrator.py  move_validator.py
src/chess_engine/: board.py
src/config/: settings.py
src/graphs/: chess_match_graph.py
src/models/: base.py  cerebras_client.py  gemini_client.py  groq_client.py  groq_client_II.py  model_factory.py
src/state/: game_state.py
src/ui/: cli_display.py
src/ui/web/: index.html
src/ui/web/src/: App.css  App.jsx  index.css
src/ui/web/src/components/: ChessBoard.jsx  EventLog.jsx  GameStatus.jsx  MatchControls.jsx  MoveHistory.jsx  PlayerPanel.jsx
src/ui/web/src/hooks/: useMatchWebSocket.js
src/ui/web/src/utils/: chessPieces.js
tests/unit/: test_cerebrase_client.py  test_google_client.py
