[project]
name = "ai-chess-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.7",
    "langchain-cerebras>=0.8.2",
    "langchain-core>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "structlog>=26.1.0",
]
